clusters/hybrid01/config/openbao/openbao-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openbao
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
